Fluxo inicial de cadastro criado

--- a/app/views/boletos/index.html.slim
+++ b/app/views/boletos/index.html.slim
@@ -4,7 +4,7 @@ section
       .span6
         h1= "Boletos disponiveis"
       .span4
-        = link_to(new_boleto_path, {class: "pull-right btn btn-success"}) do
+        = link_to new_boleto_path, class: "pull-right btn btn-success"  do
           i.icon.icon-white.icon-file
           = " Cadastrar novo boleto"
 
