Adiciona o datepicker ao formulario de cadastro de boletos

--- a/app/views/boletos/new.html.slim
+++ b/app/views/boletos/new.html.slim
@@ -15,7 +15,7 @@ row
       label for="due_date"
         = " Data de Vencimento"
       input-append
-        input#due_date name="due_date" type="date"
+        input#due_date name="due_date" type="date" class="datepicker"
     .controls
       button.btn.btn-primary type="submit"
         = "Salvar"
