Adiciona a relacao de sendable_user e send_origin, habilita os usuarios com relacao a verem os boletos.

--- a/app/views/boletos/index.html.slim
+++ b/app/views/boletos/index.html.slim
@@ -2,7 +2,7 @@ section
   header.page-header
     .row
       .span6
-        h1= "Boletos disponiveis"
+        h1= "Boletos Disponibilizados"
       .span4
         = link_to new_boleto_path, class: "pull-right btn btn-success"  do
           i.icon.icon-white.icon-file
