--- a/app/views/boletos/new.html.slim
+++ b/app/views/boletos/new.html.slim
@@ -15,13 +15,14 @@ row
       label for="due_date"
         = " Data de Vencimento"
       input-append
-        input#due_date name="due_date" type="date" class="datepicker"
+        input#due_date name="boleto[due_date]" type="date" class="datepicker"
 
     .controls
-      select name="id"
+      select name="user[id]"
         - @sendable_users.each do |user|
           option value=user.id = user.email
 
     .controls
+      input#sender_origin_email name="boleto[sender_origin_email]" type="hidden" value=current_user.email
       button.btn.btn-primary type="submit"
         = "Salvar"
