--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
+        <li><%= link_to "Ajuda",   help_path %></li>
         <li>
           <% if signed_in? %>
             <%= link_to "#{current_user.email}", sign_out_path, method: :delete %>
