--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,10 @@
 <% provide(:title, 'About') %>
 <h1>Sobre</h1>
-<p>Sistema para consulta de Boletos e dados online.</p>
+<p>Sistema de acesso rapido para:
+  <ul>
+    <li>Consulta de Boletos e dados online</li>
+    <li>Notificacao via email de boletos a vencer</li>
+    <li>Envio e recebimento de boletos por email</li>
+  </ul>
+
+ </p>
