--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,11 +2,9 @@
   <h1>Welcome to Boleto 2 Custumer</h1>
 
   <h2>
-    <p>Sistema no ar!</p>
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    <p>Sistema em testes!</p>
+    <p>Versao ALPHA, apenas para verificacao de ambiente e pequenos testes de escala.</p>
   </h2>
 
-  <%= link_to "Sign up now!", sign_up_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Teste agora!", sign_up_path, class: "btn btn-lg btn-primary" %>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
