--- a/app/views/clearance_mailer/change_password.html.slim
+++ b/app/views/clearance_mailer/change_password.html.slim
@@ -1,5 +1,3 @@
-p= t(".opening")
-p
-  = link_to t(".link_text", default: "Change my password"),                  \
-    edit_user_password_url(@user, token: @user.confirmation_token.html_safe) \
-p= raw t(".closing")
+p = t(".opening")
+p = link_to t(".link_text", default: "Change my password"), edit_user_password_url(@user, token: @user.confirmation_token.html_safe)
+p = raw t(".closing")
