--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,13 @@
 doctype html
 html
   head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title= full_title(yield(:title))
-    link href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" /
-    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" 
+    title=full_title(yield(:title))
+
+    = stylesheet_link_tag "application", params[:controller], media: "all", "data-turbolinks-track" => true
+    = javascript_include_tag "application", params[:controller], "data-turbolinks-track" => true
     = csrf_meta_tags
-    script src="//code.jquery.com/jquery-1.10.2.js" 
-    script src="//code.jquery.com/ui/1.11.4/jquery-ui.js" 
+
     = render 'layouts/shim'
   body
     = render 'layouts/header'
@@ -16,7 +15,3 @@ html
       = render 'layouts/messages'
       = yield
       = render 'layouts/footer'
-    javascript:
-      | $(function() {
-        | $( ".datepicker" ).datepicker();
-      | });
