Ajusta o novo layout do setting por modulo

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,8 @@
 doctype html
 html
   head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" 
+    = render 'layouts/imports'
     title=full_title(yield(:title))
-
-    = stylesheet_link_tag "application", params[:controller], media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", params[:controller], "data-turbolinks-track" => true
-    = csrf_meta_tags
-
-    = render 'layouts/shim'
   body
     = render 'layouts/header'
     .container
