--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -22,7 +22,7 @@ body
                   span.caret
                 ul.dropdown-menu
                   li
-                    = link_to "settings"
+                    = link_to "Configuracao", user_setting_senders_path
                   li.divider role="separator"
                   li
                     = link_to "Sign out", sign_out_path, {method: :delete}
