--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-4.col-md-offset-4
     h2= t(".title")
-    = render partial: '/users/form'
+    = render partial: 'form'
     .other-links
       = link_to t(".sign_in"), sign_in_path, class: 'btn btn-default'
